--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.1",
     "core-js": "^3.6.5",
+    "electron-splashscreen": "^1.0.0",
     "hchs-vue-charts": "^1.2.8",
     "material-design-icons-iconfont": "^5.0.1",
     "qrcode.vue": "^1.7.0",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.0",
+    "vue-chartjs": "^3.5.1",
     "vue-chartkick": "^0.6.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^3.0.6",
     "vuetify": "^2.2.11",
+    "vuetify-confirm": "^2.0.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
